crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__type_decls-13.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"type MutPoint = {mut x: number, mut y: number};\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 47,
                    },
                },
                span: 0..47,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 13,
                                },
                            },
                            span: 5..13,
                            name: "MutPoint",
                        },
                        type_ann: TypeAnn {
                            kind: Object(
                                ObjectType {
                                    elems: [
                                        Prop(
                                            TProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 17,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 30,
                                                    },
                                                },
                                                span: 17..30,
                                                name: "x",
                                                optional: false,
                                                mutable: true,
                                                type_ann: TypeAnn {
                                                    kind: Keyword(
                                                        KeywordType {
                                                            keyword: Number,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 24,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 30,
                                                        },
                                                    },
                                                    span: 24..30,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        Prop(
                                            TProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 32,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 45,
                                                    },
                                                },
                                                span: 32..45,
                                                name: "y",
                                                optional: false,
                                                mutable: true,
                                                type_ann: TypeAnn {
                                                    kind: Keyword(
                                                        KeywordType {
                                                            keyword: Number,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 39,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 45,
                                                        },
                                                    },
                                                    span: 39..45,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 16,
                                },
                                end: Position {
                                    line: 0,
                                    column: 46,
                                },
                            },
                            span: 16..46,
                            inferred_type: None,
                        },
                        type_params: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
